--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webページのタイトル</title>
-</head>
-<body>
-
-   Hello,Universe!<!-- ここにコンテンツを記述します -->
-
-</body>
-</html>
+<h1>Hello World</h1>
